<resources>
    <string name="app_name">ProfileApp</string>
    <string name="profile_name">Иван Иванов</string>
    <string name="profile_status">Android-разработчик</string>
    <string name="button_edit">Редактировать</string>
    <string name="button_back">Назад</string>
    <string name="toast_message">Редактирование профиля</string>
    <string name="toast_message2">Выход из профиля</string>

    <string name="profile_phone">+7 123 456-78-90</string>
    <string name="profile_email">ivan@mail.com</string>
    <string name="contact_phone">Телефон</string>
    <string name="contact_email">Email</string>
</resources>